--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ mypy = "==0.630"
 black = "==18.9b0"
 isort = "==4.3.15"
 ipdb = "==0.11"
+maas-uservice = {editable = true,path = "."}
 
 [packages]
 aiohttp = "==3.5.4"
