--- a/Pipfile
+++ b/Pipfile
@@ -23,7 +23,7 @@ pydantic = "==0.26"
 python_version = "3.7"
 
 [scripts]
-test = "py.test -v --cov=./ --cov-report term-missing -v"
+test = "py.test -v --cov=maas --cov-report term-missing -v"
 lint = "mypy ./ --ignore-missing-imports"
 fmt = "black --py36 -v --line-length 80 ."
 fmt-check = "black --py36 -v --line-length 80 --check ."
