--- a/Pipfile
+++ b/Pipfile
@@ -16,8 +16,9 @@ ipdb = "==0.11"
 maas-uservice = {editable = true,path = "."}
 
 [packages]
-aiohttp = "==3.5.4"
-pydantic = "==0.26"
+aiohttp = ">=3.4.4"
+pydantic = ">=0.14"
+async-worker = "==0.8.0"
 
 [requires]
 python_version = "3.7"
