--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ black = "==18.9b0"
 isort = "==4.3.15"
 ipdb = "==0.11"
 maas-uservice = {editable = true,path = "."}
+aioresponses = "==0.6.0"
 
 [packages]
 aiohttp = ">=3.4.4"
